Fixed: Episode diagrams to scale height. Scroll bar used if sequence diagram is too tall.

--- a/src/main/resources/css/UDStyle.css
+++ b/src/main/resources/css/UDStyle.css
@@ -48,6 +48,7 @@ div.ud_diagram_div {
   float: left;
   background: #ffffff;
   border: 1px solid black;
+  overflow-y: scroll;
 }
 /*
 div.ud_diagram_div_dom {
